package com.team1.animalproject.view.utils;

public interface IExceptionCustomMessageContainer {

	String getCustomMessage();
}
